...
            "state" : "translated",
            "value" : "%@个香草冰淇凌"
          }
        }
      }
    },
    "entry.actions" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Record actions"
...
